--- a/system/package.json
+++ b/system/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "system.collections",
+  "name": "@squidstack/system.collections",
   "version": "1.0.0",
   "description": "A package for core web dev utilities",
-  "main": "build/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
@@ -15,5 +15,8 @@
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "files": [
+    "build/*"
+  ]
 }
