--- a/system/tsconfig.json
+++ b/system/tsconfig.json
@@ -108,6 +108,7 @@
   "exclude": [
     "/node_modules",
     "package.json",
-    "package.lock.json"
+    "package.lock.json",
+    "./dist/**/*"
   ]
 }
